# ccpl-project

./: .gitignore  LICENSE  Makefile  README.md
asm-machine/: Makefile  README.md  asm.l
ccpl/: Makefile  TAC_README.md  meson.build
ccpl/src/: global.hh  lexer.l  main.cc  opt.cc  opt.hh  parser.y  tac.cc  tac.hh
ccpl/src/abstraction/: array_metadata.hh  ast_nodes.cc  ast_nodes.hh  block_struct.hh  struct_metadata.cc  struct_metadata.hh  tac_definitions.hh  tac_struct.hh
ccpl/src/modules/: ast_builder.cc  ast_builder.hh  ast_to_tac.cc  ast_to_tac.hh  block.cc  block.hh  obj.cc  obj.hh  opt.cc  opt.hh  tac.cc  tac.hh
ccpl/test/: a.m  aaa.m  aaa_simple.m  arr-struct.m  arr-while.m  arr_init.m  array.m  array_dynamic.m  array_dynamic_index.m  array_pointer.m  arrayq.m  assign.m  assign.s  bbb.m  break_continue_test.m  ccc.m  char.m  class.m  common.m  ddd.m  func_arr.m  func_ptr.m  global_var.m  loop_bb.m  m.m  maze.m  maze_switch.m  multidim_array.m  opt_test1.m  opt_test2.m  opt_test3.m  opt_test4.m  pointer_test.m  q.m  simple_bb.m  simple_bb.s  simple_struct.m  string_test.m  string_test.s  struct.m  (+9 more)
doc/: TAC_OPTIMIZER_GUIDE.md  report.md  the_ccpl_architecture.md  the_ccpl_language.md
reference/: asm  asm.y  asm.y.c  machine  machine.c  makefile  mini  mini.l.c  tac.h  test.m  test.s  test.x
